<resources>
    <string name="app_name">Ejercicio 1</string>
    <string name="creador">Jesús Arturo Vázquez Zaragoza</string>
    <string name="version">Versión: 1.0</string>
    <string name="logoapp">logoApp</string>
    <string name="selectFormula">Selecciona una fórmula</string>
    <string name="calcular">Calcular</string>
    <string name="imagen_formula">Imagen Formula</string>
    <string-array name="Formulas">
        <item>Distancia entre dos Puntos</item>
        <item>Fuerza de gravedad</item>
        <item>Área triángulo</item>
    </string-array>
    <string name="content_spinner">Opciones</string>
    <string name="valor_requerido">Se requiere un valor</string>
    <string name="hint1">Valor 1</string>
    <string name="hint2">Valor 2</string>
    <string name="hint3">Valor 3</string>
    <string name="hint4">Valor 4</string>
    <string name="x1">x1</string>
    <string name="x2">x2</string>
    <string name="y1">y1</string>
    <string name="y2">y2</string>
    <string name="m1">m1</string>
    <string name="m2">m2</string>
    <string name="G">G</string>
    <string name="r">r</string>
    <string name="base">b</string>
    <string name="altura">h</string>
    <string name="imageArea">Area Triángulo</string>
    <string name="imageGravedad">Gravedad</string>
    <string name="imageDistancia">Distancia</string>


</resources>